update donate button

--- a/themes/hugo-fresh/assets/bulma/sass/components/media.sass
+++ b/themes/hugo-fresh/assets/bulma/sass/components/media.sass
@@ -26,7 +26,8 @@
       padding-top: 1.5rem
 
 .media-left,
-.media-right
+.media-right,
+.media-about-us
   flex-basis: auto
   flex-grow: 0
   flex-shrink: 0
@@ -37,6 +38,11 @@
 
 .media-right
   margin-left: 1rem
+
+.media-about-us
+  margin-left: 0rem
+  margin-right: 0.1rem
+  width: 15rem
 
 .media-content
   flex-basis: auto
