--- a/themes/hugo-fresh/layouts/partials/hero-footer.html
+++ b/themes/hugo-fresh/layouts/partials/hero-footer.html
@@ -2,16 +2,14 @@
 {{- $clientLogos := index $hero "clientlogos" }}
 <div class="hero-foot mb-20">
   <div class="container">
-    <div class="tabs is-centered">
+    <!-- <div class="tabs is-centered">
       <ul>
         {{- range $clientLogos }}
         <li>
-          <a>
-            <img class="partner-logo" src="{{ printf "/images/logos/clients/%s.svg" . | relURL }}">
-          </a>
+            <img class="partner-logo" src="{{ printf "/images/logos/clients/%s.png" . | relURL }}">
         </li>
         {{- end }}
       </ul>
-    </div>
+    </div> -->
   </div>
 </div>
