--- a/themes/hugo-fresh/layouts/partials/section2.html
+++ b/themes/hugo-fresh/layouts/partials/section2.html
@@ -15,7 +15,7 @@
         <article class="media icon-box">
           <figure class="media-left">
             <p class="image">
-              <img src="{{ printf "/images/illustrations/icons/%s.svg" .icon | relURL }}">
+              <img src="{{ printf "/images/illustrations/icons/%s.svg" .icon | relURL }}" alt="{{ printf "icon-%s" .icon }}">
             </p>
           </figure>
           <div class="media-content">
