--- a/themes/hugo-fresh/assets/bulma/sass/layout/hero.sass
+++ b/themes/hugo-fresh/assets/bulma/sass/layout/hero.sass
@@ -153,3 +153,20 @@
   flex-grow: 1
   flex-shrink: 0
   padding: 3rem 1.5rem
+
+.floating-ballon
+  position: relative
+  top: 0
+  transform: rotate(0deg)
+  animation: float 6s ease-in-out infinite
+
+
+@keyframes float
+	0%
+    top: 0px; transform: rotate(0deg)
+	50% 
+		top: -20px; transform: rotate(2deg)
+	100%
+		top: 0; transform: rotate(0deg)
+
+	
