--- a/themes/hugo-fresh/layouts/partials/hero-body.html
+++ b/themes/hugo-fresh/layouts/partials/hero-body.html
@@ -1,6 +1,7 @@
 {{- $hero       := .Site.Params.hero }}
 {{- $title      := index $hero "title" }}
 {{- $subtitle   := index $hero "subtitle" }}
+{{- $donation   := index $hero "donation" }}
 {{- $buttonText := index $hero "buttontext" }}
 {{- $buttonLink := index $hero "buttonlink" }}
 {{- $image      := index $hero "image" }}
@@ -16,6 +17,11 @@
           {{ . }}
         </h2>
         {{ end }}
+        {{ with $donation }}
+        <h3 class="donation is-5 is-muted">
+          {{ . }}
+        </h3>
+        {{ end }}
         <p>
           <a class="button cta rounded primary-btn raised" href="{{ $buttonLink }}">
             {{ $buttonText }}
@@ -23,7 +29,7 @@
         </p>
       </div>
       <div class="column is-5 is-offset-1">
-        <figure class="image is-4by3">
+        <figure class="image is-4by3 floating-ballon">
           <img src="{{ printf "/images/%s" $image | relURL }}" alt="Aiuta Cumbuco">
         </figure>
       </div>
