--- a/themes/hugo-fresh/layouts/partials/section2.html
+++ b/themes/hugo-fresh/layouts/partials/section2.html
@@ -10,7 +10,7 @@
         <h3 class="subtitle is-5 is-muted">{{ $subtitle }}</h3>
         <div class="divider"></div>
       </div>
-      <div class="column is-7 mt-60">
+      <div class="column is-7">
         {{- range $features }}
         <article class="media icon-box">
           <figure class="media-left">
@@ -22,7 +22,6 @@
             <div class="content">
               <p>
                 <span class="icon-box-title">{{ .title }}</span>
-
                 <span class="icon-box-text">{{ .text | markdownify }}</span>
               </p>
             </div>
